# loan-anomaly-detection

./: .gitignore  Dockerfile  README.md  example_output.csv  lint  pyproject.toml
anomaly_detector/: main.py  parser.py  reporter.py
file_augmenter/: flle_augmenter.py
test/: conftest.py  test_integration.py  test_parser.py  test_parser_validate.py  test_reporter.py
test/data/: loans.xlsx
